# basic-mlops

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.py
docs/: conf.py
src/: main.py
